Refactor code structure for improved readability and maintainability

--- a/configs/glomerulo/retr_fsl_train_test/dinov2_fsl_config.yaml
+++ b/configs/glomerulo/retr_fsl_train_test/dinov2_fsl_config.yaml
@@ -6,6 +6,7 @@ data:
   class_mapping: {Crescent: 0, Hypercellularity: 1, Membranous: 2, Normal: 3, Podocytopathy: 4,
     Sclerosis: 5}
   batch_size: 32
+  batch_size_test: 200
   num_workers: 3  # Number of workers to load the data
   suffle_test: false
   suffle_train: false
