--- a/configs/glomerulo/retr_fsl_train_test/virchow2_fsl_config.yaml
+++ b/configs/glomerulo/retr_fsl_train_test/virchow2_fsl_config.yaml
@@ -5,7 +5,8 @@ data:
   test_dir: datasets/final/glomerulo/test
   class_mapping: {Crescent: 0, Hypercellularity: 1, Membranous: 2, Normal: 3, Podocytopathy: 4,
     Sclerosis: 5}
-  batch_size: 32
+  batch_size: 64
+  batch_size_test: 64  # Batch size for testing
   num_workers: 3  # Number of workers to load the data
   suffle_test: false
   suffle_train: false
