--- a/configs/glomerulo/retr_fsl_train_test/phikon-v2_fsl_config.yaml
+++ b/configs/glomerulo/retr_fsl_train_test/phikon-v2_fsl_config.yaml
@@ -1,9 +1,10 @@
 # Paths and directories for training and testing data
 data:
   dataset_type: FewShotFolderDataset    # Specify the dataset type (e.g., terumo, etc.)
-  train_dir: datasets/final/ovarian-cancer-splitted/train
-  test_dir: datasets/final/ovarian-cancer-splitted/test
-  class_mapping: {Clear_Cell: 0, Endometri: 1, Mucinous: 2, Non_Cancerous: 3, Serous: 4}
+  train_dir: datasets/final/glomerulo/train
+  test_dir: datasets/final/glomerulo/test
+  class_mapping: {Crescent: 0, Hypercellularity: 1, Membranous: 2, Normal: 3, Podocytopathy: 4,
+    Sclerosis: 5}
   batch_size: 1 # Batch size for few-shot learning = 1
   batch_size_test: 200
   num_workers: 3  # Number of workers to load the data
@@ -13,13 +14,13 @@ data:
 # Model configuration
 model:
   name: phikon-v2_fsl     # Example: You can set it to resnet18, resnet34, etc.
-  experiment_name: phikon-v2_fsl_ovarian-cancer-splitted # Name of the experiment
+  experiment_name: phikon-v2_fsl_glomerulo       # Name of the experiment
   pretrained: true  # Use pre-trained weights
-  num_classes: 5  # Number of classes in the dataset
+  num_classes: 6  # Number of classes in the dataset
   load_checkpoint: false  # Load a pre-trained model checkpoint
   checkpoint_path: ''  # Path to the model checkpoint
   model_name: phikon-v2                  # Specify the ViT model name
-  n_way: 5
+  n_way: 6
   q_shot: 5
   k_queries: 128 # For few-shot learning, this will be the batch size
   hidden_dim: 512  # Hidden dimension for FSL encoder
@@ -92,9 +93,9 @@ testing:
   enabled: true  # Enable testing
   pipeline: default    # The pipeline to run (e.g., default, retrieval, etc.)
   load_embeddings: false  # Load embeddings from disk
-  embeddings_path: ./artifacts/ovarian-cancer-splitted/embeddings_phikon-v2_fsl # Path to load embeddings
+  embeddings_path: ./artifacts/glomerulo/embeddings_phikon-v2_fsl       # Path to load embeddings
   save_embeddings: true  # Save embeddings to disk
-  embeddings_save_path: ./artifacts/ovarian-cancer-splitted/embeddings_phikon-v2_fsl # Path to save embeddings
+  embeddings_save_path: ./artifacts/glomerulo/embeddings_phikon-v2_fsl       # Path to save embeddings
   normalize_embeddings: false  # Normalize embeddings to unit norm (L2 normalization)
   list_of_metrics:
     # - type: accuracy
@@ -119,8 +120,8 @@ metric_logging:
   tool: txt    # Tool to log metrics (txt, csv, mlflow, etc.)
 # Output configuration
 output:
-  model_dir: ./artifacts/retr_fsl_train_test_ovarian-cancer-splitted # Directory to save model artifacts
-  results_dir: ./local_experiments/retr_fsl_train_test_ovarian-cancer-splitted # Directory to save results
+  model_dir: ./artifacts/retr_fsl_train_test_glomerulo # Directory to save model artifacts
+  results_dir: ./local_experiments/retr_fsl_train_test_glomerulo # Directory to save results
 
 
 
