--- a/configs/ovarian-cancer-splitted/retr_fsl_train_test/phikon_fsl_config.yaml
+++ b/configs/ovarian-cancer-splitted/retr_fsl_train_test/phikon_fsl_config.yaml
@@ -5,6 +5,7 @@ data:
   test_dir: datasets/final/ovarian-cancer-splitted/test
   class_mapping: {Clear_Cell: 0, Endometri: 1, Mucinous: 2, Non_Cancerous: 3, Serous: 4}
   batch_size: 1 # Batch size for few-shot learning = 1
+  batch_size_test: 200
   num_workers: 3  # Number of workers to load the data
   suffle_train: true  # Shuffle the training data
   suffle_test: false
