--- a/configs/skin-cancer-splitted/retr_fsl_train_test/phikon-v2_fsl_config.yaml
+++ b/configs/skin-cancer-splitted/retr_fsl_train_test/phikon-v2_fsl_config.yaml
@@ -16,8 +16,8 @@ model:
   experiment_name: phikon-v2_fsl_skin-cancer-splitted # Name of the experiment
   pretrained: true  # Use pre-trained weights
   num_classes: 7  # Number of classes in the dataset
-  load_checkpoint: false  # Load a pre-trained model checkpoint
-  checkpoint_path: ''  # Path to the model checkpoint
+  load_checkpoint: true  # Load a pre-trained model checkpoint
+  checkpoint_path: './artifacts/retr_fsl_train_test_skin-cancer-splitted/phikon-v2_fsl_skin-cancer-splitted_phikon-v2_fsl_2025-06-09_07-17-15_checkpoint.pth'  # Path to the model checkpoint
   model_name: phikon-v2                  # Specify the ViT model name
   n_way: 7
   q_shot: 5
@@ -89,6 +89,12 @@ transform:
   to_tensor: true
 
 testing:
+  transform:
+    resize: [224, 224]  # Resize images to 224x224
+    normalize:
+      mean: [0.485, 0.456, 0.406]  # Normalize mean for ImageNet
+      std: [0.229, 0.224, 0.225]   # Normalize std for ImageNet
+  to_tensor: true
   enabled: true  # Enable testing
   pipeline: default    # The pipeline to run (e.g., default, retrieval, etc.)
   load_embeddings: false  # Load embeddings from disk
