--- a/configs/templates/fsl_train/default_train_config.yaml
+++ b/configs/templates/fsl_train/default_train_config.yaml
@@ -90,6 +90,14 @@ transform:
   to_tensor: true
 
 testing:
+  transform:
+    resize: [224, 224]  # Resize images to 224x224
+    horizontal_flip: false  # Disable random horizontal flip for testing
+    vertical_flip: false  # Disable random vertical flip for testing
+    normalize:
+      mean: [0.485, 0.456, 0.406]  # Normalize mean for ImageNet
+      std: [0.229, 0.224, 0.225]   # Normalize std for ImageNet
+    to_tensor: true
   enabled: true  # Enable testing
   pipeline: default    # The pipeline to run (e.g., default, retrieval, etc.)
   load_embeddings: false  # Load embeddings from disk
