--- a/configs/ovarian-cancer-splitted/retr_fsl_train_test/resnet_fsl_config.yaml
+++ b/configs/ovarian-cancer-splitted/retr_fsl_train_test/resnet_fsl_config.yaml
@@ -32,6 +32,12 @@ model:
   hidden_dim: 512
   embedding_dim: 128
 testing:
+  transform:  # Transformation to apply during testing
+    resize: [224, 224]  # Resize images to 224x224
+    normalize:
+      mean: [0.485, 0.456, 0.406]  # Normalize mean for ImageNet
+      std: [0.229, 0.224, 0.225]   # Normalize std for ImageNet
+    to_tensor: true  # Convert to tensor (default is true)
   pipeline: default    # The pipeline to run (e.g., default, retrieval, etc.)
   load_embeddings: false  # Load embeddings from disk
   embeddings_path: ./artifacts/ovarian-cancer-splitted/embeddings_resnet_fsl # Path to load embeddings
