--- a/configs/glomerulo/autoencoder/default_train_config.yaml
+++ b/configs/glomerulo/autoencoder/default_train_config.yaml
@@ -5,8 +5,8 @@ data:
   test_dir: datasets/final/glomerulo/test
   class_mapping: {Crescent: 0, Hypercellularity: 1, Membranous: 2, Normal: 3, Podocytopathy: 4,
     Sclerosis: 5}
-  batch_size: 128 
-  batch_size_test: 128
+  batch_size: 64 
+  batch_size_test: 64
   num_workers: 3  # Number of workers to load the data
   suffle_train: true  # Shuffle the training data
   suffle_test: false
@@ -15,18 +15,16 @@ data:
 model:
   name: autoencoder_resnet    # Example: You can set it to resnet18, resnet34, etc.
   model_name: resnet50
-  freeze_params: false   # Freeze the parameters of backbone model 
+  freeze_params: true   # Freeze the parameters of backbone model 
   encoder_dim: 2048  # Dimension of the encoder output.
   decoder_channels: 2048 #  Number of channels in the decoder output
   decoder_h: 8 # Height of the decoder output feature map.
   decoder_w: 8 # Width of the decoder output feature map.
   experiment_name: autoencoder_resnet_glomerulo             # Name of the experiment
   pretrained: true  # Use pre-trained weights
-  num_classes: 6  # Number of classes in the dataset
   load_checkpoint: false  # Load a pre-trained model checkpoint
   checkpoint_path: ''  # Path to the model checkpoint
-  hidden_dim: 2048  # Hidden dimension for FSL encoder
-  out_dim: 1024  # Embedding dimension for FSL encoder
+
 
 # Loss function configuration
 loss:
