--- a/configs/skin-cancer-splitted/autoencoder/default_train_config.yaml
+++ b/configs/skin-cancer-splitted/autoencoder/default_train_config.yaml
@@ -14,12 +14,12 @@ data:
 model:
   name: autoencoder_resnet    # Example: You can set it to resnet18, resnet34, etc.
   model_name: resnet50
-  freeze_params: false  # Freeze the parameters of backbone model 
+  freeze_params: true  # Freeze the parameters of backbone model 
   encoder_dim: 2048  # Dimension of the encoder output.
   decoder_channels: 2048 #  Number of channels in the decoder output
   decoder_h: 8 # Height of the decoder output feature map.
   decoder_w: 8 # Width of the decoder output feature map.
-  experiment_name: autoencoder_resnet_glomerulo             # Name of the experiment
+  experiment_name: autoencoder_resnet_skin-cancer-splitted             # Name of the experiment
   pretrained: true  # Use pre-trained weights
   load_checkpoint: false  # Load a pre-trained model checkpoint
   checkpoint_path: ''  # Path to the model checkpoint
@@ -104,7 +104,7 @@ metric_logging:
   tool: txt    # Tool to log metrics (txt, csv, mlflow, etc.)
 # Output configuration
 output:
-  results_dir: ./local_experiments/autoencoder/glomerulo    # Directory to save results
+  results_dir: ./local_experiments/autoencoder/skin-cancer-splitted    # Directory to save results
 
 
 
