--- a/configs/glomerulo/retr_test_backone/best_model_test_uni_config.yaml
+++ b/configs/glomerulo/retr_test_backone/best_model_test_uni_config.yaml
@@ -5,7 +5,7 @@ data:
   test_dir: datasets/final/glomerulo/test
   class_mapping: {Crescent: 0, Hypercellularity: 1, Membranous: 2, Normal: 3, Podocytopathy: 4,
     Sclerosis: 5}
-  batch_size: 64
+  batch_size: 32
   num_workers: 3  # Number of workers to load the data
   suffle_test: false
   suffle_train: false
@@ -19,23 +19,23 @@ transform:
       std: [0.229, 0.224, 0.225]   # Normalize std for ImageNet
     to_tensor: true
 
-
 # Model configuration
 model:
-  name: uni             # Example: You can set it to resnet18, resnet34, etc.
-  experiment_name: uni_glomerulo             # Name of the experiment
+  name: uni_fsl         # Example: You can set it to resnet18, resnet34, etc.
+  experiment_name: uni_fsl_glomerulo         # Name of the experiment
   pretrained: true  # Use pre-trained weights
   num_classes: 6  # Number of classes in the dataset
-  load_checkpoint: false  # Load a pre-trained model checkpoint
-  checkpoint_path: ''  # Path to the model checkpoint
+  load_checkpoint: false   # Load a pre-trained model checkpoint
+  checkpoint_path: ./artifacts/best-models/ # Path to the model checkpoint
   model_name: uni                        # Specify the ViT model name
-
-
+  hidden_dim: 512
+  embedding_dim: 128
+  
 testing:
   pipeline: default    # The pipeline to run (e.g., default, retrieval, etc.)
   load_embeddings: false  # Load embeddings from disk
-  embeddings_path: ./artifacts/glomerulo/embeddings_uni             # Path to load embeddings
-  save_embeddings: true  # Save embeddings to disk
+  embeddings_path: ./artifacts/glomerulo/embeddings_uni_fsl         # Path to load embeddings
+  save_embeddings: true  # Save embeddings to disk 
   normalize_embeddings: false  # Normalize embeddings to unit norm (L2 normalization)
   list_of_metrics:
     # - type: accuracy
@@ -60,7 +60,7 @@ metric_logging:
   tool: txt    # Tool to log metrics (txt, csv, mlflow, etc.)
 # Output configuration
 output:
-  model_dir: ./artifacts/retr_test_backone_glomerulo # Directory to save model artifacts
-  results_dir: ./local_experiments/retr_test_backone_glomerulo # Directory to save results
+  model_dir: ./artifacts/retr_fsl_train_test_glomerulo # Directory to save model artifacts
+  results_dir: ./local_experiments/retr_fsl_train_test_glomerulo # Directory to save results
 
 
