--- a/configs/ovarian-cancer-splitted/retr_test_backone/UNI2-h_config.yaml
+++ b/configs/ovarian-cancer-splitted/retr_test_backone/UNI2-h_config.yaml
@@ -11,11 +11,12 @@ data:
 
 # Transformation configuration for image preprocessing
 transform:
-  resize: [224, 224]  # Resize images to 224x224
-  normalize:
-    mean: [0.485, 0.456, 0.406]  # Normalize mean for ImageNet
-    std: [0.229, 0.224, 0.225]   # Normalize std for ImageNet
-  to_tensor: true  # Convert to tensor (default is true)
+  test:
+    resize: [224, 224]  # Resize images to 224x224
+    normalize:
+      mean: [0.485, 0.456, 0.406]  # Normalize mean for ImageNet
+      std: [0.229, 0.224, 0.225]   # Normalize std for ImageNet
+    to_tensor: true  # Convert to tensor (default is true)
 
 # Model configuration
 model:
@@ -33,7 +34,6 @@ testing:
   load_embeddings: false  # Load embeddings from disk
   embeddings_path: ./artifacts/ovarian-cancer-splitted/embeddings_UNI2-h # Path to load embeddings
   save_embeddings: true  # Save embeddings to disk
-  : ./artifacts/ovarian-cancer-splitted/embeddings_UNI2-h # Path to save embeddings
   normalize_embeddings: false  # Normalize embeddings to unit norm (L2 normalization)
   list_of_metrics:
     # - type: accuracy
